package com.ftkj.proto;

option java_outer_classname = "PlayerCardPB";
import "Prop.proto";

// 球星卡
message PlayerCardMainData {
	repeated PlayerCardData collectCard = 1;
}

// 球星卡
message PlayerCardData {
	//卡组
	 required int32 type =1;
	//球员
	required int32 playerId =2;
	//星级
	required int32 starLv =3;
	//经验
	required int32 exp =4;
	// 品质
	required int32 quality = 5;
	/**突破已经被吞噬的底薪球员数量*/
	optional int32 costNum = 6;
}

message SimpleCardData {
	//卡组
	 required int32 type =1;
	//球员
	required int32 playerId =2;
	// 状态, 0是新，1，是已收集
	required int32 status =3;
}

//收集回包
message CollectData {
	required int32 code =1;
	repeated SimpleCardData cardList = 2;
	repeated PropSimpleData propList = 3;
}
